# California-housing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
california_housing/: .gitignore  dataset.py  infer.py  model  model.onnx  model.py  train.py  trainer.py  transforms.py
california_housing/outputs/2023-10-13/12-10-04/.hydra/: config.yaml  hydra.yaml
california_housing/outputs/2023-10-13/17-42-01/.hydra/: hydra.yaml
california_housing/outputs/2023-10-13/17-42-28/.hydra/: hydra.yaml
conf/: config.yaml
conf/data_loading/: data_loading.yaml
conf/logging/: logging.yaml
conf/model_params/: model_params.yaml
conf/trainer/: trainer.yaml
data/: .gitignore  test_data.csv  test_data.csv.dvc  train_data.csv  train_data.csv.dvc  val_data.csv  val_data.csv.dvc
models/: .gitignore  model.dvc
results/: predictions.csv
