[tool.poetry]
name = "california-housing"
version = "0.1.0"
description = ""
authors = ["Vladislav Naumov <vlad21naumov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.26.0"
pandas = "^2.1.1"
torch = "2.0.0"
torchvision = "0.15.1"
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.1"
dvc = "^3.25.0"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
mlflow = "^2.8.1"
onnx = "^1.15.0"
onnxruntime = "^1.16.3"
onnx2torch = "^1.5.13"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["california_housing"]
profile = "black"
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
